--- a/index.html
+++ b/index.html
@@ -4,24 +4,24 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Offline System Map</title>
-	<link rel="stylesheet" href="https://osm.gteh.top/v1/index.css">
+	<link rel="stylesheet" href="./assets/index.css">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Sans">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Serif+TC">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Serif+SC">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Serif+JP">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Serif+KR">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-	<script src="https://osm.gteh.top/v1/fabric.min.js"></script>
-	<script src="https://osm.gteh.top/v1/fontfaceobserver.standalone.js"></script>
-	<script type="module" src="https://osm.gteh.top/v1/index.js"></script>
-	<script type="module" src="https://osm.gteh.top/v1/drawing.js"></script>
-	<script type="module" src="https://osm.gteh.top/v1/data.js"></script>
-	<script type="module" src="https://osm.gteh.top/v1/document.js"></script>
-	<script type="module" src="https://osm.gteh.top/v1/actions.js"></script>
-	<script type="module" src="https://osm.gteh.top/v1/settings.js"></script>
-	<script type="module" src="https://osm.gteh.top/v1/utilities.js"></script>
-	<script type="module" src="https://osm.gteh.top/v1/fetch.js"></script>
-	<script type="module" src="https://osm.gteh.top/v1/version.js"></script>
+	<script src="./assets/fabric.min.js"></script>
+	<script src="./assets/fontfaceobserver.standalone.js"></script>
+	<script type="module" src="./assets/index.js"></script>
+	<script type="module" src="./assets/drawing.js"></script>
+	<script type="module" src="./assets/data.js"></script>
+	<script type="module" src="./assets/document.js"></script>
+	<script type="module" src="./assets/actions.js"></script>
+	<script type="module" src="./assets/settings.js"></script>
+	<script type="module" src="./assets/utilities.js"></script>
+	<script type="module" src="./assets/fetch.js"></script>
+	<script type="module" src="./assets/version.js"></script>
 </head>
 <body>
 <canvas id="canvas"></canvas>
@@ -107,7 +107,7 @@
 		<div>
 			<div class="spacer"></div>
 			<div id="player_list"></div>
-			<div class="version">OSM v1.0.0, 250801</div>
+			<div class="version">OSM v1.0.1, 250804</div>
 			<div id="version" class="version"></div>
 		</div>
 	</div>
